fix wrap problem

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,8 @@ h2 {
     font-family: 'Gilroy bold';
     font-size: 18px;
     margin-top: 0.7em;
-    transition: 1s;
+    text-indent: -49px; 
+    padding-left: 36px; 
 }
 
 .check {
